src/main/java/com/cydeo/solid/interfaceSegregation/example/good/CanWalk.java
package com.cydeo.solid.interfaceSegregation.example.good;

public interface CanWalk {

    void walk();

}
