src/main/java/com/cydeo/solid/interfaceSegregation/example/bad/Bird.java
package com.cydeo.solid.interfaceSegregation.example.bad;

public interface Bird {

    void eat();
    void walk();
    void fly();

}
